# ROSCock

src/: .fr-lIunS0  README.md
src/ROSCock_gazebo_plugin/: .#model_push.cc  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  build.sh  cmake_install.cmake  garage_training.world  ikea.cpp  ikea.cpp~  model_push.cc  model_push.world  run.sh  train.world  train.world~
src/ROSCock_gazebo_plugin/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src/ROSCock_gazebo_plugin/devel/: .catkin  .rosinstall  setup.sh
src/ROSCock_gazebo_plugin/hector_gazebo/hector_gazebo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ROSCock_gazebo_plugin/hector_gazebo/hector_gazebo_thermal_camera/: CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
src/ROSCock_gazebo_plugin/hector_gazebo/hector_gazebo_worlds/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ROSCock_gazebo_plugin/hector_gazebo_plugins/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ROSCock_gazebo_plugin/models/: #ROSCock.sdf#  #ROSCock.sdf#~  #ROSCock.urdf#  #ROSCock.urdf.xacro#  ROSCock.config  ROSCock.sdf  ROSCock.sdf~  ROSCock.urdf  ROSCock.urdf.xacro  ROSCock.urdf.xacro~  ROSCock.urdf~  ROSSonar.urdf  ROSSonar.urdf~
src/ROSCock_gazebo_plugin/scripts/: .#cock_whisperer.py  CMakeCache.txt  Makefile  apply_torque.py  apply_torque.py~  cmake_install.cmake  cock_whisperer.py  cock_whisperer.py~  ikea  ikea.cpp  ikea.cpp~  rotate_wheels.py  rotate_wheels.py~  spawn_model.py  spawn_model.py~
(+113 files in other folders)
